--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@ the destination to appear in a new page, they can use their browser's
 &quot;open in new window&quot; command — assuming, of course, that the link is
 not a piece of code that interferes with the browser’s standard behavior.</p>
 
-10. Not Answering Users' Questions
-Users are highly goal-driven on the Web. They visit sites because there's something
+<h2>10. Not Answering Users' Questions</h2>
+<p>Users are highly goal-driven on the Web. They visit sites because there's something
 they want to accomplish — maybe even buy your product. The ultimate failure of
 a website is to fail to provide the information users are looking for. Sometimes
 the answer is simply not there and you lose the sale because users have to
@@ -155,6 +155,6 @@ understand the nature of an offering, and not providing it makes people feel
 lost and reduces their understanding of a product line. We have hours of video
 of users asking <i>&quot;Where's the price?&quot;</i> while tearing
 their hair out. Even B2C sites often make the associated mistake of forgetting prices in product
-lists, such as <a href="http://www.nngroup.com/reports/ecommerce-ux-homepages-and-category-pages/">category pages</a> or <a href="http://www.nngroup.com/reports/ecommerce-ux-search-including-faceted-search/">search results</span></a>. Knowing the price is key in both situations; it lets users differentiate among products and click through to the most relevant ones.
+lists, such as <a href="http://www.nngroup.com/reports/ecommerce-ux-homepages-and-category-pages/">category pages</a> or <a href="http://www.nngroup.com/reports/ecommerce-ux-search-including-faceted-search/">search results</span></a>. Knowing the price is key in both situations; it lets users differentiate among products and click through to the most relevant ones.</p>
 </body>
 </html>
